--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -12,6 +12,10 @@
     border-radius: 1rem;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
     position: relative;
+    overflow: hidden;
+    &:hover .card-over {
+      transform: translateY(0%);
+    }
   }
 
   .title {
@@ -37,5 +41,9 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
     font-size: 1.5rem;
+    padding: 1rem;
+    transform: translateY(100%);
+    z-index: 1;
+    transition: transform 0.7s ease-in-out;
   }
 }
